feat: Добавляет шапку и блок hero

--- a/source/index.html
+++ b/source/index.html
@@ -1,15 +1,207 @@
 <!DOCTYPE html>
 <html lang="ru" data-validate="html">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internship</title>
-    <link rel="stylesheet" href="sass/style.scss">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Internship</title>
+  <link rel="stylesheet" href="sass/style.scss">
+</head>
 
-  <body class="page-body">
-    <div data-test="hero">hero</div>
+<body class="page-body">
+  <header class="main-header" data-test="hero">
+    <h1 class="visually-hidden">Проект Стажировка</h1>
+
+    <div class="main-header__wrapper">
+      <section class="main-header__navigation navigation">
+        <h2 class="visually-hidden">Навигация</h2>
+        <div class="navigation__wrapper">
+          <div class="navigation__logo">
+            <svg class="navigation__logo-image" width="30" height="30">
+              <use href="../__spritemap#sprite-logo-icon"></use>
+            </svg>
+          </div>
+
+          <nav class="navigation__menu navigation-menu navigation-menu--closed">
+            <button
+              class="navigation-menu__toggle button navigation-menu__open-button navigation-menu__close-button button-reset"
+              type="button">
+              Mеню
+            </button>
+
+            <div class="navigation-menu__wrapper">
+              <ul class="list-reset navigation-menu__list">
+                <li class="navigation-menu__item">
+                  <a class="link-reset navigation-menu__link" href="#about">О проекте</a>
+                </li>
+                <li class="navigation-menu__item navigation-menu__item--sub">
+                  <a class="link-reset navigation-menu__link" href="#programs">Программы</a>
+
+                  <ul class="list-reset navigation-menu__list navigation-menu__list--sub navigation-menu__list--closed">
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Стажировки</a>
+                    </li>
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Волонтёрство</a>
+                    </li>
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Учёба</a>
+                    </li>
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Религия</a>
+                    </li>
+                  </ul>
+                </li>
+
+                <li class="navigation-menu__item">
+                  <a class="link-reset navigation-menu__link" href="#grant">Как поехать</a>
+                </li>
+
+                <li class="navigation-menu__item">
+                  <a class="link-reset navigation-menu__link" href="#reviews">Отзывы</a>
+                </li>
+
+                <li class="navigation-menu__item navigation-menu__item--sub">
+                  <a class="link-reset navigation-menu__link" href="#news">Новости</a>
+
+                  <ul class="list-reset navigation-menu__list navigation-menu__list--sub navigation-menu__list--closed">
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Общее</a>
+                    </li>
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Волонтёрство</a>
+                    </li>
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Стажировки</a>
+                    </li>
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Карьера</a>
+                    </li>
+                    <li class="navigation-menu__item">
+                      <a class="link-reset navigation-menu__link" href="#">Путешествия</a>
+                    </li>
+                  </ul>
+                </li>
+
+                <li class="navigation-menu__item">
+                  <a class="link-reset navigation-menu__link" href="#contacts">Контакты</a>
+                </li>
+              </ul>
+            </div>
+
+          </nav>
+        </div>
+      </section>
+
+
+      <section class="main-header__hero hero">
+        <div class="hero__swiper hero-swiper">
+          <div class="hero-swiper__swiper-pagination swiper-pagination"></div>
+          <div class="swiper-wrapper hero-swiper__wrapper">
+
+            <div class="swiper-slide hero-swiper__slide hero-slide hero-slide--travel">
+              <picture>
+                <source width="1440" height="800" type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/hero/hero-travel-desktop@1x.webp 1x, img/hero/hero-travel-desktop@2x.webp 2x" >
+                <source width="768" height="1024" type="image/webp" media="(min-width: 768px)"
+                  srcset="img/hero/hero-travel-tablet@1x.webp 1x, img/hero/hero-travel-tablet@2x.webp 2x" >
+                <source width="320" height="568" type="image/webp"
+                  srcset="img/hero/hero-travel-mobile@1x.webp 1x, img/hero/hero-travel-mobile@2x.webp 2x" >
+                <source width="1440" height="800" type="image/jpg" media="(min-width: 1440px)"
+                  srcset="img/hero/hero-travel-desktop@1x.jpg 1x, img/hero/hero-travel-desktop@2x.jpg 2x" >
+                <source width="768" height="1024" type="image/jpg" media="(min-width: 768px)"
+                  srcset="img/hero/hero-travel-tablet@1x.jpg 1x, img/hero/hero-travel-tablet@2x.jpg 2x" >
+                <img class="hero-slide__img" src="img/hero/hero-travel-mobile@1x.jpg"
+                  srcset="img/hero/hero-travel-mobile@2x.jpg 2x" alt="Девушка участвующая в программе обмена" width="320"
+                  height="568" >
+              </picture>
+              <div class="hero-slide__wrapper">
+                <div class="hero-slide__info">
+                  <h3 class="hero-slide__header">
+                    Глобальный профессиональный опыт обучения за рубежом
+                  </h3>
+                  <p>
+                    Погрузитесь в академическую программу, проходя практику в разных городах, ощущая настоящий
+                    студенческий стиль жизни!
+
+                  </p>
+
+                  <div class="hero-slide__button-wrapper">
+                    <button class="hero-slide__button button-reset" type="button">Подробнее</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide hero-swiper__slide hero-slide hero-slide--volunteer">
+              <picture>
+                <source width="1440" height="800" type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/hero/hero-volunteer-desktop@1x.webp 1x, img/hero/hero-volunteer-desktop@2x.webp 2x" >
+                <source width="768" height="1024" type="image/webp" media="(min-width: 768px)"
+                  srcset="img/hero/hero-volunteer-tablet@1x.webp 1x, img/hero/hero-volunteer-tablet@2x.webp 2x" >
+                <source width="320" height="568" type="image/webp"
+                  srcset="img/hero/hero-volunteer-mobile@1x.webp 1x, img/hero/hero-volunteer-mobile@2x.webp 2x" >
+                <source width="1440" height="800" type="image/jpg" media="(min-width: 1440px)"
+                  srcset="img/hero/hero-volunteer-desktop@1x.jpg 1x, img/hero/hero-volunteer-desktop@2x.jpg 2x" >
+                <source width="768" height="1024" type="image/jpg" media="(min-width: 768px)"
+                  srcset="img/hero/hero-volunteer-tablet@1x.jpg 1x, img/hero/hero-volunteer-tablet@2x.jpg 2x" >
+                <img class="hero-slide__img" src="img/hero/hero-volunteer-mobile@1x.jpg"
+                  srcset="img/hero/hero-volunteer-mobile@2x.jpg 2x" alt="Групповое фото волонтеров" width="320"
+                  height="568" >
+              </picture>
+              <div class="hero-slide__wrapper">
+                <div class="hero-slide__info">
+                  <h3 class="hero-slide__header">
+                    Волонтёрские программы – внесите свой вклад в общество
+                  </h3>
+                  <p>
+                    Возможности для преподавания, органического сельского хозяйства, устойчивого образа жизни и другое.
+                  </p>
+
+                  <div class="hero-slide__button-wrapper">
+                    <button class="hero-slide__button button-reset" type="button">Подробнее</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide hero-swiper__slide hero-slide hero-slide--internship">
+              <picture>
+                <source width="1440" height="800" type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/hero/hero-internship-desktop@1x.webp 1x, img/hero/hero-internship-desktop@2x.webp 2x" >
+                <source width="768" height="1024" type="image/webp" media="(min-width: 768px)"
+                  srcset="img/hero/hero-internship-tablet@1x.webp 1x, img/hero/hero-internship-tablet@2x.webp 2x" >
+                <source width="320" height="568" type="image/webp"
+                  srcset="img/hero/hero-internship-mobile@1x.webp 1x, img/hero/hero-internship-mobile@2x.webp 2x" >
+                <source width="1440" height="800" type="image/jpg" media="(min-width: 1440px)"
+                  srcset="img/hero/hero-internship-desktop@1x.jpg 1x, img/hero/hero-internship-desktop@2x.jpg 2x" >
+                <source width="768" height="1024" type="image/jpg" media="(min-width: 768px)"
+                  srcset="img/hero/hero-internship-tablet@1x.jpg 1x, img/hero/hero-internship-tablet@2x.jpg 2x" >
+                <img class="hero-slide__img" src="img/hero/hero-internship-mobile@1x.jpg"
+                  srcset="img/hero/hero-internship-mobile@2x.jpg 2x" alt="Группа стажеров за работой" width="320"
+                  height="568" >
+              </picture>
+              <div class="hero-slide__wrapper">
+                <div class="hero-slide__info">
+                  <h3 class="hero-slide__header">
+                    Программы стажировок в крупнейших компаниях мира
+                  </h3>
+                  <p>
+                    Получите незаменимый опыт работы в ведущих мировых компаниях и государственных организациях.
+                  </p>
+
+                  <div class="hero-slide__button-wrapper">
+                    <button class="hero-slide__button button-reset" type="button">Подробнее</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+  </header>
+  <main>
     <div data-test="about">about</div>
     <div data-test="programs">programs</div>
     <div data-test="grant">grant</div>
@@ -18,8 +210,10 @@
     <div data-test="reviews">reviews</div>
     <div data-test="contacts">contacts</div>
     <div data-test="form">form</div>
-    <div data-test="footer">footer</div>
-    <script type="module" src="js/main.js"></script>
-  </body>
+  </main>
+
+  <footer data-test="footer">footer</footer>
+  <script type="module" src="js/main.js"></script>
+</body>
 
 </html>
