fix: Перемeщает блок hero

--- a/source/index.html
+++ b/source/index.html
@@ -11,9 +11,7 @@
 <body class="page-body">
   <header class="main-header" data-test="hero">
     <h1 class="visually-hidden">Проект Стажировка</h1>
-
-    <div class="main-header__wrapper">
-      <section class="navigation">
+      <div class="navigation">
         <h2 class="visually-hidden">Навигация</h2>
         <div class="navigation__wrapper">
           <div class="navigation__logo">
@@ -91,9 +89,10 @@
 
           </nav>
         </div>
-      </section>
+      </div>
+  </header>
 
-
+  <main>
       <section class="hero">
         <div class="hero__swiper hero-swiper">
           <div class="hero-swiper__swiper-pagination swiper-pagination"></div>
@@ -200,9 +199,7 @@
           </div>
         </div>
       </section>
-  </header>
 
-  <main>
     <section class="about" id="about" data-test="about">
       <div class="about__wrapper">
         <div class="about__info about-info">
