--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="page-body">
-  <header class="main-header" data-test="hero">
+  <header class="main-header">
     <h1 class="visually-hidden">Проект Стажировка</h1>
       <div class="navigation">
         <h2 class="visually-hidden">Навигация</h2>
@@ -93,7 +93,7 @@
   </header>
 
   <main>
-      <section class="hero">
+      <section class="hero" data-test="hero">
         <div class="hero__swiper hero-swiper">
           <div class="hero-swiper__swiper-pagination swiper-pagination"></div>
           <div class="swiper-wrapper hero-swiper__wrapper">
@@ -111,7 +111,7 @@
                 <source width="768" height="1024" type="image/jpg" media="(min-width: 768px)"
                   srcset="img/hero/hero-travel-tablet@1x.jpg 1x, img/hero/hero-travel-tablet@2x.jpg 2x">
                 <img class="hero-slide__img" src="img/hero/hero-travel-mobile@1x.jpg"
-                  srcset="img/hero/hero-travel-mobile@2x.jpg 2x" alt="Девушка участвующая в программе обмена"
+                  srcset="img/hero/hero-travel-mobile@2x.jpg 2x" alt="Девушка, участвующая в программе обмена"
                   width="320" height="568">
               </picture>
               <div class="hero-slide__wrapper">
