fix: Добавляет мелкие исправления

--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internship</title>
+  <link rel="preload" href="fonts/Manrope-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="sass/style.scss">
 </head>
 
@@ -661,7 +662,7 @@
 
             <li class="faq-accordion__item">
               <button type="button">
-                Признаётся ли учёба в&nbsp;рамках проекта<br> для дальнейшего обучения?
+                Признаётся ли учёба в&nbsp;рамках проекта<br>для дальнейшего обучения?
               </button>
               <div>
                 Студенты, участвующие в проекте, могут использовать полученные
@@ -968,7 +969,7 @@
                 <span class="visually-hidden">Выберите город</span>
               </button>
               <ul class="subscription-dropdown__list" role="listbox">
-                <li class="subscription-dropdown__item" role="option" data-value="" tabindex="0"></li>
+                <li class="subscription-dropdown__item" role="option" data-value=" " tabindex="0"></li>
                 <li class="subscription-dropdown__item" role="option" data-value="moscow" tabindex="0">Москва</li>
                 <li class="subscription-dropdown__item" role="option" data-value="spb" tabindex="0">Санкт-Петербург</li>
                 <li class="subscription-dropdown__item" role="option" data-value="novosibirsk" tabindex="0">Новосибирск</li>
@@ -1100,7 +1101,7 @@
             <span class="visually-hidden">Выберите город</span>
           </button>
           <ul class="modal-dropdown__list" role="listbox">
-            <li class="modal-dropdown__item" role="option" data-value="" tabindex="0"></li>
+            <li class="modal-dropdown__item" role="option" data-value=" " tabindex="0"></li>
             <li class="modal-dropdown__item" role="option" data-value="moscow" tabindex="0">Москва</li>
             <li class="modal-dropdown__item" role="option" data-value="spb" tabindex="0">Санкт-Петербург</li>
             <li class="modal-dropdown__item" role="option" data-value="novosibirsk" tabindex="0">Новосибирск</li>
